--- a/css/new-age.css
+++ b/css/new-age.css
@@ -157,7 +157,7 @@ header.masthead {
   padding-bottom: 100px;
   color: white;
   background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../img/bg-pattern.png"), linear-gradient(to left, #4b6770, #03465b);
 }
 
 header.masthead .header-content {
